--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .textWrap {
   background-color: white;
-  width: 32vw;
+  width: 95%;
   min-height: 7vh;
   margin: 2vh 0;
   border-radius: 10px;
@@ -22,14 +22,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 40vw;
+  width: 50vw;
   padding: 2vh;
   border-radius: 10px;
 }
 
 .buttonWrap {
   display: flex;
-  width: 32vw;
+  width: 48vw;
   flex-wrap: wrap;
   margin: 0;
 }
@@ -40,15 +40,21 @@
   border: none;
   font-size: 6vw;
   margin: 0.5vw;
+  cursor: pointer;
 }
 
 .C-button {
+  text-align: center;
   background-color: rgb(255, 140, 0);
+  width: 15vw;
+}
+
+.zero-button {
+  width: 15vw;
 }
 
 .sqrt-button{
   font-size: 3.5vw;
   padding: 2.8vh 0;
-  width: 7vw;
-  max-height: 110px;
+  height: 7vw;
 }
